quan lý nguoi dung xong

--- a/src/main/resources/templates/admin/qlbaidang.html
+++ b/src/main/resources/templates/admin/qlbaidang.html
@@ -68,60 +68,40 @@
 				id="sidenavAccordion">
 				<div class="sb-sidenav-menu">
 					<div class="nav">
-						<div class="sb-sidenav-menu-heading">Core</div>
-						<a class="nav-link" href="index.html">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-tachometer-alt"></i>
-							</div> Dashboard
-						</a>
-						<div class="sb-sidenav-menu-heading">Interface</div>
-						<a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapseLayouts" aria-expanded="false"
-							aria-controls="collapseLayouts">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-columns"></i>
-							</div> Quản lý tài khoản
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý môn học
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý lớp học
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý bài đăng
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý giao dịch
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a>
-					</div>
+                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <a class="nav-link" href="/admin">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Dashboard
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="/admin/quanlytaikhoan" >
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý tài khoản
+                                
+                            </a>
+                           
+                            <a class="nav-link collapsed" href="/admin/quanlymonhoc" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý môn học
+                                
+                            </a>
+                            
+                            <a class="nav-link collapsed" href="/admin/quanlylophoc" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý lớp học
+                                
+                            </a>
+                            <a class="nav-link collapsed" href="/admin/quanlybaidang" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý bài đăng
+                                
+                            </a>
+                            <a class="nav-link collapsed" href="/admin/quanlygiaodich" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý giao dịch
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                        </div>
 				</div>
 
 			</nav>
