--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -5,70 +5,85 @@
 <title>Đăng Nhập</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Official Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<meta name="keywords"
+	content="Official Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script type="application/x-javascript">
+	 addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+</script>
 <!-- fonts -->
-<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+<link
+	href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900"
+	rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+	integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+	crossorigin="anonymous" />
 
 <!-- /fonts -->
 <!-- css -->
-<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css"
+	media="all" />
 <link href="/css/style.css" rel='stylesheet' type='text/css' media="all" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- /css -->
 </head>
 <body>
- 
-    <div id="header">
-        <div class="logo">
-            <a href="#">
-                
-                <h2 style=" height: 54px;
-                border: black;
-                padding-left: 50px;
-                float: left;" class="text-logo">Dasuo</h2>
-            
-         </a>
- 
-        </div>
-        
-     <div class="btn-dk-dn">
-         <a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px; color: yellow" href="/dangnhap" id="btn-dn">Đăng nhập</a>
-         <a  href="/dangky" id="btn-dk">Đăng ký</a>
-     </div>
-     
-        
-     </div>
-    
-<h1 class="w3ls">ĐĂNG NHẬP</h1>
-<div class="content-w3ls">
-	<div class="content-agile1">
-		<h2 class="agileits1">Dasuo</h2>
-		<p class="agileits2">Kết nối gia sư dạy và học trực tuyến .</p>
+
+	<div id="header">
+		<div class="logo">
+			<a href="#">
+
+				<h2
+					style="height: 54px; border: black; padding-left: 50px; float: left;"
+					class="text-logo">Dasuo</h2>
+
+			</a>
+
+		</div>
+
+		<div class="btn-dk-dn">
+			<a
+				style="border: 1px solid white; padding: 6px 12px; border-radius: 3px; color: yellow"
+				href="/dangnhap" id="btn-dn">Đăng nhập</a> <a href="/dangky"
+				id="btn-dk">Đăng ký</a>
+		</div>
+
+
 	</div>
+
+	<h1 class="w3ls">ĐĂNG NHẬP</h1>
 	<div class="content-agile2">
-		<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-			
-
-			<div class="form-control w3layouts">	
-				<input type="email" id="email" name="username" placeholder="Email" title="Please enter a valid email" required="">
+		<div class="content-w3ls">
+			<div class="content-agile1">
+				<h2 class="agileits1">Dasuo</h2>
+				<p class="agileits2">Kết nối gia sư dạy và học trực tuyến .</p>
 			</div>
+			<div class="content-agile2">
+				<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
 
-			
-			<div class="form-control agileinfo">	
-				<input type="password" class="lock" name="password" placeholder="Password" id="password2" required="">
-			</div>	
-			
-			<input type="submit" class="register" value="Đăng nhập" name="submit">
 
-            <div style="margin-left: 75px;" class="tacvu">
-                <a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên mật khẩu</a>
-                <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
-            </div>
-		</form>
-	</div>
-</div>
+					<div class="form-control w3layouts">
+						<input type="email" id="email" name="username" placeholder="Email"
+							title="Please enter a valid email" required="">
+					</div>
+
+
+					<div class="form-control agileinfo">
+						<input type="password" class="lock" name="password"
+							placeholder="Password" id="password2" required="">
+					</div>
+
+					<input type="submit" class="register" value="Đăng nhập"
+						name="submit">
+
+					<div style="margin-left: 75px;" class="tacvu">
+						<a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên
+							mật khẩu</a> <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
+					</div>
+				</form>
+			</div>
+		</div>
 </body>
 </html>
