--- a/src/main/resources/templates/admin/qltaikhoan.html
+++ b/src/main/resources/templates/admin/qltaikhoan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,6 +15,27 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
 	crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	crossorigin="anonymous"></script>
+<script src="/js/scripts.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/chart-area-demo.js"></script>
+<script src="/assets/demo/chart-bar-demo.js"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+	crossorigin="anonymous"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/datatables-demo.js"></script>
+
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -48,60 +69,40 @@
 				id="sidenavAccordion">
 				<div class="sb-sidenav-menu">
 					<div class="nav">
-						<div class="sb-sidenav-menu-heading">Core</div>
-						<a class="nav-link" href="index.html">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-tachometer-alt"></i>
-							</div> Dashboard
-						</a>
-						<div class="sb-sidenav-menu-heading">Interface</div>
-						<a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapseLayouts" aria-expanded="false"
-							aria-controls="collapseLayouts">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-columns"></i>
-							</div> Quản lý tài khoản
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý môn học
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý lớp học
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý bài đăng
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a> <a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapsePages" aria-expanded="false"
-							aria-controls="collapsePages">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-book-open"></i>
-							</div> Quản lý giao dịch
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a>
-					</div>
+                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <a class="nav-link" href="/admin">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Dashboard
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="/admin/quanlytaikhoan" >
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý tài khoản
+                                
+                            </a>
+                           
+                            <a class="nav-link collapsed" href="/admin/quanlymonhoc" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý môn học
+                                
+                            </a>
+                            
+                            <a class="nav-link collapsed" href="/admin/quanlylophoc" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý lớp học
+                                
+                            </a>
+                            <a class="nav-link collapsed" href="/admin/quanlybaidang" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý bài đăng
+                                
+                            </a>
+                            <a class="nav-link collapsed" href="/admin/quanlygiaodich" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý giao dịch
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                        </div>
 				</div>
 
 			</nav>
@@ -116,6 +117,10 @@
 								aria-describedby="dataTable_info" style="width: 100%;">
 								<thead>
 									<tr role="row">
+										<th class="sorting_asc" tabindex="0" aria-controls="dataTable"
+											rowspan="1" colspan="1" aria-sort="ascending"
+											aria-label="Name: activate to sort column descending"
+											style="width: 94px;">ID</th>
 										<th class="sorting_asc" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1" aria-sort="ascending"
 											aria-label="Name: activate to sort column descending"
@@ -143,47 +148,111 @@
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Salary: activate to sort column ascending"
+											style="width: 58px;">Trạng thái</th>
+										<th class="sorting" tabindex="0" aria-controls="dataTable"
+											rowspan="1" colspan="1"
+											aria-label="Salary: activate to sort column ascending"
 											style="width: 58px;">Chức năng</th>
+											
 									</tr>
 								</thead>
-								
-								<tbody>
-									<tr role="row" class="odd">
-										<td class="sorting_1">Airi Satou</td>
-										<td>Accountant</td>
-										<td>Tokyo</td>
-										<td>33</td>
-										<td>2008/11/28</td>
-										<td>$162,700</td>
-										<td>$162,700</td>
-									</tr>
+
+								<tbody id="noidung">
+									
 								</tbody>
 							</table>
+							<div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 0 to 0 of 0 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><a href="#">«</a><a class="active">1</a><a href="/admin/quanlybaidang?page=2">2</a><a href="#">»</a></ul></div></div></div>
 						</div>
 					</div>
 
 				</div>
 			</main>
+			
 
 		</div>
+				<div class="modal fade" id="updateAirplaneModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<!-- Modal body -->
+					
+
+					<!-- Modal body -->
+					<div class="modal-body" id="booking-detail-body">
+						<!--  booking info -->
+
+
+						<!-- Tickets -->
+						<h3>Thông tin người dùng</h3>
+						
+
+						<div class="row">
+
+							<div class="col-sm-12">
+								
+								<table class="table">
+									<tr>
+										<td><b>ID</b></td>
+										<td>1</td>
+									</tr>
+									<tr>
+										<td><b>Email:</b></td>
+										<td
+											style=" word-wrap: break-word;">Yêu
+											cầufenfffffddddddddddddddddddddfffffffffffff:</td>
+
+									</tr>
+									<tr>
+										<td><b>Giới tính:</b></td>
+										<td>123456789</td>
+									</tr>
+									<tr>
+										<td><b>Họ tên:</b></td>
+										<td>abc@gmail.com</td>
+									</tr>
+									<tr>
+										<td><b>Học phí:</b></td>
+										<td>ONLINE</td>
+									</tr>
+									<tr>
+										<td><b>Số điện thoại:</b></td>
+										<td>2</td>
+									</tr>
+									<tr>
+										<td><b>Mô tả:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Số dư:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Loại tài khoản:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Tỉnh thành:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Khóa:</b></td>
+										<td>50000</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				
 	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/js/scripts.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/chart-area-demo.js"></script>
-	<script src="/assets/demo/chart-bar-demo.js"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/datatables-demo.js"></script>
+<script src="/js/admin/taikhoan/hienthi.js"></script>
+<script src="/js/admin/taikhoan/chitiettaikhoan.js"></script>
+<script src="/js/admin/taikhoan/khoataikhoan.js"></script>
 </body>
 </html>
