--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -38,7 +38,7 @@
                      
                         </p>
 
-                        <p>Chúng tôi biết bạn có nhiều sự lựa chọn. Cảm ơn bạn đã tin tưởng sản phẩm của chúng tôi!</p>
+                        <p>Chúng tôi biết bạn có nhiều sự lựa chọn. Cảm ơn bạn đã tin tưởng dịch vụ của chúng tôi!</p>
                     </div>
                     <div style="width: 90%;background-color: #FFF;height: 300px;margin-left: 44px;margin-top: 30px;text-align: center;"
                         class="suluachon">
