--- a/src/main/resources/templates/web/userinformation.html
+++ b/src/main/resources/templates/web/userinformation.html
@@ -30,9 +30,8 @@
                  </section>
                  
                  <section class="infor-main" style="width: 100%;height: 210px;">
-                     <div class="avatar" style="position: absolute;top:-100px; margin-left: 15px;padding-top: 400px;">
-                      
-                         <img  src="/img/infor.png" alt="">
+                     <div class="avatar" style="position: absolute;top:-100px; margin-left: 0px;padding-top: 400px;">
+                         <img  src="/img/lavatar.png" alt="" height="200px">
                      </div>
                      <div class="name-user">
                         
