--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>dasuo hasaghi masenjo</title>
+    <title>DASUO</title>
 </head>
 
 <body>
@@ -167,8 +167,9 @@
                 <div class="inf-giasu">
                     <script src="/js/web/taikhoan/giasunoibat.js"></script>
                 </div>
+                
                 <div class="sub-content">
-                    <div class="request">
+                    <div class="request" style="border-right: solid 1px #069d86; padding-right: 10px;">
                         <h3 class="h3-sub-content">TÌM GIA SƯ, TÌM GIÁO VIÊN</h3>
                         <p>Thật đơn giản, bạn chỉ cần gửi yêu cầu học, các giáo viên sẽ gửi đề nghị dạy tới bạn cùng với
                             mức học phí mong muốn. Bạn sẽ chủ động chọn lựa giáo viên phù hợp với bạn nhất.</p>
@@ -176,16 +177,16 @@
                             <a href="">Yêu cầu tìm gia sư</a>
                         </div>
                     </div>
-                    <div class="become">
+                    <div class="become" style="padding-left: 15px;">
                         <h3 class="h3-sub-content">TRỞ THÀNH GIA SƯ</h3>
                         <p>Nếu bạn có một khả năng nào đó, hãy đăng ký trở thành gia sư trên hệ thống Dasuo, bạn sẽ được
                             tiếp cận với hàng ngàn học viên và có cơ hội được truyền đạt kiến thức của mình</p>
                         <div class="btn-request">
-                            <a href="">Trở thành gia sư</a>
+                            <a href="/dangky">Trở thành gia sư</a>
                         </div>
                     </div>
                 </div>
-                <hr>
+                
                 <hr style="margin-top: 30px;color: #069d86; width: 100%;">
              <div class="last-content">
                  <script src="/js/web/components/httv.js"></script>
