--- a/src/main/resources/templates/web/chi-tiet-bai-dang.html
+++ b/src/main/resources/templates/web/chi-tiet-bai-dang.html
@@ -39,5 +39,6 @@
         <!-- footer -->
     </div>
     <script src="/js/web/lop/taolop.js"></script>
+    <script src="/js/web/baidang/yeucauday.js"></script>
 </body>
 </html>
