--- a/src/main/resources/templates/web/register.html
+++ b/src/main/resources/templates/web/register.html
@@ -84,7 +84,7 @@
 					<p style="color: #eb7168; display: none; margin-left: 67px;"
 						id="cf-password-msg">Mật khẩu nhập lại không khớp!</p>
 				</div>
-
+				<input type="hidden" id="enable" name="enable" value="1">
 				<input type="submit" id="submit-btn" class="register"
 					value="Đăng ký">
 			</form>
