--- a/src/main/resources/templates/admin/qllophoc.html
+++ b/src/main/resources/templates/admin/qllophoc.html
@@ -15,6 +15,25 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
 	crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	crossorigin="anonymous"></script>
+<script src="/js/scripts.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/chart-area-demo.js"></script>
+<script src="/assets/demo/chart-bar-demo.js"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/datatables-demo.js"></script>
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -131,17 +150,8 @@
 									</tr>
 								</thead>
 
-								<tbody>
-									<tr role="row" class="odd">
-										<td class="sorting_1">Airi Satou</td>
-										<td>Accountant</td>
-										<td>Tokyo</td>
-										<td>33</td>
-										<td>2008/11/28</td>
-										<td>$162,700</td>
-										<td>$162,700</td>
-										<td>$162,700</td>
-									</tr>
+								<tbody id="bang">
+									
 								</tbody>
 							</table>
 						</div>
@@ -149,26 +159,69 @@
 
 				</div>
 			</main>
+			
 
 		</div>
+		<div class="modal fade" id="updateAirplaneModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<div class="modal-body" id="booking-detail-body">
+						<!--  booking info -->
+
+
+						<!-- Tickets -->
+						<h3>Thông tin chi tiết lớp học</h3>
+						
+
+						<div class="row">
+
+							<div class="col-sm-12">
+								
+								<table class="table">
+									<tr>
+										<td><b>ID</b></td>
+										<td>{lop_Id}</td>
+									</tr>
+									<tr>
+										<td><b>Tên lớp:</b></td>
+										<td>{tenLop}</td>
+
+									</tr>
+									<tr>
+										<td><b>Ngày nhận:</b></td>
+										<td>{ngayNhan}</td>
+									</tr>
+									<tr>
+										<td><b>Họ tên người học:</b></td>
+										<td>{nguoiHoc}</td>
+									</tr>
+									<tr>
+										<td><b>Họ tên người dạy:</b></td>
+										<td>{nguoiDay}</td>
+									</tr>
+									<tr>
+										<td><b>Tiền học:</b></td>
+										<td>{tienHoc}</td>
+									</tr>
+									<tr>
+										<td><b>Giờ học:</b></td>
+										<td style=" word-wrap: break-word;">{gioHoc}</td>
+									</tr>
+									
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/js/scripts.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/chart-area-demo.js"></script>
-	<script src="/assets/demo/chart-bar-demo.js"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/datatables-demo.js"></script>
+	
+	<script src="/js/admin/lop/hienthi.js"></script>
+	<script src="/js/admin/lop/chitietlophoc.js"></script>
 </body>
 </html>
