--- a/src/main/resources/templates/admin/homeadmin.html
+++ b/src/main/resources/templates/admin/homeadmin.html
@@ -26,7 +26,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="login.html">Logout</a>
+                        <a class="dropdown-item" href="/thoat">Logout</a>
                     </div>
                 </li>
             </ul>
