--- a/src/main/resources/templates/admin/qlbaidang.html
+++ b/src/main/resources/templates/admin/qlbaidang.html
@@ -58,7 +58,7 @@
 					aria-labelledby="userDropdown">
 
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="login.html">Logout</a>
+					<a class="dropdown-item" href="/thoat">Logout</a>
 				</div></li>
 		</ul>
 	</nav>
@@ -111,6 +111,8 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-12">
+						<center><h1>Quản lý bài đăng</h1></center>
+						<br>
 							<table class="table table-bordered dataTable" id="dataTable"
 								width="100%" cellspacing="0" role="grid"
 								aria-describedby="dataTable_info" style="width: 100%;">
