--- a/src/main/resources/templates/admin/qlgiaodich.html
+++ b/src/main/resources/templates/admin/qlgiaodich.html
@@ -15,6 +15,26 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
 	crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	crossorigin="anonymous"></script>
+<script src="/js/scripts.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/chart-area-demo.js"></script>
+<script src="/assets/demo/chart-bar-demo.js"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/datatables-demo.js"></script>
+
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -38,7 +58,7 @@
 					aria-labelledby="userDropdown">
 
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="login.html">Logout</a>
+					<a class="dropdown-item" href="/thoat">Logout</a>
 				</div></li>
 		</ul>
 	</nav>
@@ -48,40 +68,42 @@
 				id="sidenavAccordion">
 				<div class="sb-sidenav-menu">
 					<div class="nav">
-                            <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="/admin">
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
-                            </a>
-                            <div class="sb-sidenav-menu-heading">Interface</div>
-                            <a class="nav-link collapsed" href="/admin/quanlytaikhoan" >
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Quản lý tài khoản
-                                
-                            </a>
-                           
-                            <a class="nav-link collapsed" href="/admin/quanlymonhoc" >
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Quản lý môn học
-                                
-                            </a>
-                            
-                            <a class="nav-link collapsed" href="/admin/quanlylophoc" >
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Quản lý lớp học
-                                
-                            </a>
-                            <a class="nav-link collapsed" href="/admin/quanlybaidang" >
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Quản lý bài đăng
-                                
-                            </a>
-                            <a class="nav-link collapsed" href="/admin/quanlygiaodich" >
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Quản lý giao dịch
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
-                        </div>
+						<div class="sb-sidenav-menu-heading">Core</div>
+						<a class="nav-link" href="/admin">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-tachometer-alt"></i>
+							</div> Dashboard
+						</a>
+						<div class="sb-sidenav-menu-heading">Interface</div>
+						<a class="nav-link collapsed" href="/admin/quanlytaikhoan">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-book-open"></i>
+							</div> Quản lý tài khoản
+
+						</a> <a class="nav-link collapsed" href="/admin/quanlymonhoc">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-book-open"></i>
+							</div> Quản lý môn học
+
+						</a> <a class="nav-link collapsed" href="/admin/quanlylophoc">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-book-open"></i>
+							</div> Quản lý lớp học
+
+						</a> <a class="nav-link collapsed" href="/admin/quanlybaidang">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-book-open"></i>
+							</div> Quản lý bài đăng
+
+						</a> <a class="nav-link collapsed" href="/admin/quanlygiaodich">
+							<div class="sb-nav-link-icon">
+								<i class="fas fa-book-open"></i>
+							</div> Quản lý giao dịch
+							<div class="sb-sidenav-collapse-arrow">
+								<i class="fas fa-angle-down"></i>
+							</div>
+						</a>
+					</div>
 				</div>
 
 			</nav>
@@ -91,6 +113,8 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-12">
+						<center><h1>Quản lý giao dịch</h1></center>
+						<br>
 							<table class="table table-bordered dataTable" id="dataTable"
 								width="100%" cellspacing="0" role="grid"
 								aria-describedby="dataTable_info" style="width: 100%;">
@@ -116,22 +140,12 @@
 											rowspan="1" colspan="1"
 											aria-label="Start date: activate to sort column ascending"
 											style="width: 65px;">Số tiền</th>
-										<th class="sorting" tabindex="0" aria-controls="dataTable"
-											rowspan="1" colspan="1"
-											aria-label="Salary: activate to sort column ascending"
-											style="width: 58px;">Chức năng</th>
+
 									</tr>
 								</thead>
-								
-								<tbody>
-									<tr role="row" class="odd">
-										<td class="sorting_1">Airi Satou</td>
-										<td>Accountant</td>
-										<td>Tokyo</td>
-										<td>33</td>
-										<td>2008/11/28</td>
-										<td>$162,700</td>
-									</tr>
+
+								<tbody id="hienthi">
+									
 								</tbody>
 							</table>
 						</div>
@@ -142,23 +156,7 @@
 
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/js/scripts.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/chart-area-demo.js"></script>
-	<script src="/assets/demo/chart-bar-demo.js"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/datatables-demo.js"></script>
+	<script src="/js/admin/giaodich/hienthigiaodich.js"></script>
+
 </body>
 </html>
