--- a/src/main/resources/templates/admin/qltaikhoan.html
+++ b/src/main/resources/templates/admin/qltaikhoan.html
@@ -59,7 +59,7 @@
 					aria-labelledby="userDropdown">
 
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="login.html">Logout</a>
+					<a class="dropdown-item" href="/thoat">Logout</a>
 				</div></li>
 		</ul>
 	</nav>
@@ -112,6 +112,9 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-12">
+						<center><h1>Quản lý tài khoản</h1></center>
+						<br>
+						
 							<table class="table table-bordered dataTable" id="dataTable"
 								width="100%" cellspacing="0" role="grid"
 								aria-describedby="dataTable_info" style="width: 100%;">
