--- a/src/main/resources/templates/web/chi-tiet-bai-dang.html
+++ b/src/main/resources/templates/web/chi-tiet-bai-dang.html
@@ -26,6 +26,7 @@
                 <script src="/js/web/baidang/chitietbaidang.js"></script>
             </div>
             <input type="hidden" th:value="${tkid}" id="tkid">
+            <input type="hidden" th:value="${role}" id="role">
         </section>
         <!-- content -->
         <!-- footer -->
