--- a/src/main/resources/templates/web/hienthilichlop.html
+++ b/src/main/resources/templates/web/hienthilichlop.html
@@ -20,7 +20,7 @@
             <script src="/js/web/components/header_web.js"></script>
         </div>
         <div style="width: 100%;margin-top: 54px; padding: 0px 40px;" class="container">
-            <div style="width:20% ;" class="left-content">
+            <div class="left-content">
                 <script src="/js/web/components/leftmenu.js"></script>
             </div>
 
