--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -50,7 +50,7 @@
                             <a class="option1" href="/hienthilichlop">Lớp học</a>
                         </div>
                         <div class="luachon">
-                            <a class="option1" href="/giasuonline">Gia sư</a>
+                            <a class="option3" href="/dangkitrothanhgiasu">Trở thành Gia sư</a>
                         </div>
                         <div class="luachon">
                             <a class="option1" href="#">Nạp tiền</a>
