--- a/src/main/resources/templates/web/doimatkhau.html
+++ b/src/main/resources/templates/web/doimatkhau.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Đổi mật khẩu</title>
+<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+	integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+	crossorigin="anonymous" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<title>Đổi mật khẩu</title>
 </head>
 <body>
-    <div style="background-color: #f7f7f7;" class="wrapper">
-        <div id="header">
-            <script src="/js/web/components/header_web.js"></script>
-        </div>  
-        <div class="container main-content">
-            <div class="region region-content">
-          <div id="block-system-main" class="block block-system">
-      
-              
-        <div class="content">
-          <!-- <div class="dasuo-account-change-email">
+	<div style="background-color: #f7f7f7;" class="wrapper">
+		<div id="header">
+			<script src="/js/web/components/header_web.js"></script>
+		</div>
+		<div class="container main-content">
+			<div class="region region-content">
+				<div id="block-system-main" class="block block-system">
+
+
+					<div class="content">
+						<!-- <div class="dasuo-account-change-email">
               <span>Thay đổi Email</span>
             </div>
             <div id="dasuo-account-change-email-content">
@@ -41,46 +45,67 @@
       </div>
     </form>
     </div> -->
-      <div class="Dasuo-account-change-pass">
-          <span>Thay đổi Mật khẩu</span>
-        </div>
+						<div class="Dasuo-account-change-pass">
+							<span>Thay đổi Mật khẩu</span>
+						</div>
+						
+						<div id="dasuo-account-change-pass-content">
+						<div class="text-success">
+							<h3>[[${message}]]</h3>
+						</div>
+							<form class="custom-form" th:action="@{/doimatkhau}"
+								method="post" modelattribute="taikhoan"
+								id="blacasa-account-change-pass-form" accept-charset="UTF-8">
 
-        <div id="dasuo-account-change-pass-content">
-            <form class="custom-form" action="/tannguyen-070321/settings" method="post" id="blacasa-account-change-pass-form" accept-charset="UTF-8"><div>
-                <div class="form-item form-type-password form-item-pass">
-                    <label for="edit-pass">Nhập mật khẩu cũ
-                        <span class="form-required" title="This field is required.">*</span>
-                    </label>
-                    <!-- Chinh lai input chieu dai 60% -->
-                   <input placeholder="Mật khẩu từ 6 đến 32 ký tự" type="password" id="edit-pass" name="pass" size="60" maxlength="128" class="form-text required">
-                  </div>
-        <div class="form-item form-type-password form-item-pass">
-        <label for="edit-pass">Nhập mật khẩu mới 
-            <span class="form-required" title="This field is required.">*</span>
-        </label>
-        <!-- Chinh lai input chieu dai 60% -->
-       <input placeholder="Mật khẩu từ 6 đến 32 ký tự" type="password" id="edit-pass" name="pass" size="60" maxlength="128" class="form-text required">
-      </div>
-      <div class="form-item form-type-password form-item-re-pass">
-        <label for="edit-re-pass">Nhập lại mật khẩu <span class="form-required" title="This field is required.">*</span></label>
-       <!-- Chinh lai input chieu dai 60% -->
-        <input placeholder="Nhắc lại mật khẩu" type="password" id="edit-re-pass" name="re_pass" size="60" maxlength="128" class="form-text required">
-      </div>
-      <input type="submit" id="edit-submit--2" name="op" value="Lưu" class="form-submit"><input type="hidden" name="form_build_id" value="form-W2zMRrafSVeCmbpFkIFyzUbbjX4uPPqdfSisI-OaEcg">
+								<div>
+									<div class="form-item form-type-password form-item-pass">
+										<label for="edit-pass">Nhập mật khẩu cũ <span
+											class="form-required" title="This field is required.">*</span>
+										</label>
+										<!-- Chinh lai input chieu dai 60% -->
+										<input placeholder="Mật khẩu từ 6 đến 32 ký tự"
+											type="password" id="edit-pass" name="matKhau" size="60"
+											maxlength="128" class="form-text required"
+											title="Vui lòng nhập mật khẩu củ" required="">
+									</div>
+									<div class="form-item form-type-password form-item-pass">
+										<label for="edit-pass">Nhập mật khẩu mới <span
+											class="form-required" title="This field is required.">*</span>
+										</label>
+										<!-- Chinh lai input chieu dai 60% -->
+										<input placeholder="Mật khẩu từ 6 đến 32 ký tự"
+											type="password" id="edit-pass" name="matKhauMoi" size="60"
+											maxlength="128" class="form-text required"
+											title="Vui lòng nhập mật khẩu mới" required="">
+									</div>
+									<div class="form-item form-type-password form-item-re-pass">
+										<label for="edit-re-pass">Nhập lại mật khẩu <span
+											class="form-required" title="This field is required.">*</span></label>
+										<!-- Chinh lai input chieu dai 60% -->
+										<input placeholder="Nhắc lại mật khẩu" type="password"
+											id="edit-re-pass" name="re_pass" size="60" maxlength="128"
+											class="form-text required">
+									</div>
+									<input type="submit" id="edit-submit--2" name="op" value="Lưu"
+										class="form-submit"><input type="hidden"
+										name="form_build_id"
+										value="form-W2zMRrafSVeCmbpFkIFyzUbbjX4uPPqdfSisI-OaEcg">
 
-      </div>
-    </form>
-</div>  </div>
-      </div>
-        </div>
-          
-        </div>
-        <hr style="color: #069d86; width: 100%;">
-        <div class="last-content">
-            <script src="/js/web/components/httv.js"></script>
-        </div>
-        <div id="footer">
-            <script src="/js/web/components/footer_web.js"></script>
-        </div>
+								</div>
+							</form>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<hr style="color: #069d86; width: 100%;">
+		<div class="last-content">
+			<script src="/js/web/components/httv.js"></script>
+		</div>
+		<div id="footer">
+			<script src="/js/web/components/footer_web.js"></script>
+		</div>
 </body>
 </html>
