--- a/src/main/resources/templates/web/chitietlophoc.html
+++ b/src/main/resources/templates/web/chitietlophoc.html
@@ -32,12 +32,12 @@
          <!-- right-content -->
          <div style="max-height: 560px;" class="right-content right-contents">
             <div class="head-block">
-                <h4 style="padding: 10px 8px;width: 222px;color: #fff;background-color: #069d86;font-weight: bold;">LỚP: ....</h4>
+                <h4 style="padding: 10px 8px;width: 222px;color: #fff;background-color: #069d86;font-weight: bold;">CHI TIẾT LỚP HỌC</h4>
                 <hr style="width: 75.8%;opacity: 0.8;float: right;" color="#069d86">
              </div>
              <div class="body-block body-blocks">
                 <div style="margin-bottom: 20px;width: 100%; height: 400px;" class="bai-dang">
-                    
+                    <script src="/js/web/lop/loptheoid.js"></script>
                 </div>
             </div>
          </div>
